lang/src/ast/snapshots/rain_lang__ast__expr__test__number_multiply_add_precedence2.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"5 + 2 * 3\")"
---
BinaryOp(
 Number(5)
 +
 BinaryOp(
  Number(2)
  *
  Number(3)
 )
)
