lang/src/ast/snapshots/rain_lang__ast__expr__test__number_multiply_left_associative.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"1 * 2 * 3\")"
---
BinaryOp(
 BinaryOp(
  Number(1)
  Multiplication(*)
  Number(2)
 )
 Multiplication(*)
 Number(3)
)
