lang/src/ast/snapshots/rain_lang__ast__expr__test__number_star_add_precedence.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"5 * 2 + 3\")"
---
BinaryOp(
 BinaryOp(
  Number(5)
  Star(*)
  Number(2)
 )
 Plus(+)
 Number(3)
)
