lang/src/ast/snapshots/rain_lang__ast__expr__test__number_star_left_associative.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"1 * 2 * 3\")"
---
BinaryOp(
 BinaryOp(
  Number(1)
  Star(*)
  Number(2)
 )
 Star(*)
 Number(3)
)
