lang/src/ast/snapshots/rain_lang__ast__expr__test__number_star_left_precedence.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"1 * 2 * 3\")"
---
BinaryOp(
 Number(1)
 Star(*)
 BinaryOp(
  Number(2)
  Star(*)
  Number(3)
 )
)
