lang/src/ast/snapshots/rain_lang__ast__expr__test__string_literal.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"\\\"asldjf\\\"\")"
---
DoubleQuoteLiteral("asldjf")
